--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </div>
 </header>
 <main class="main">
-    <div class="container">
     <section class="get-app">
+        <div class="container">
         <div class="get-app__inner">
             <div class="get-app__title">
                 Взгляните на жизнь иначе!
@@ -59,8 +59,10 @@
                 Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
             </div>
         </div>
+        </div>
     </section>
     <section class="app-description">
+        <div class="container">
         <div class="app-description__title">
             <span>Устали от серости мегаполиса?</span>
             <span>Нам есть, что вам предложить!</span>
@@ -99,8 +101,10 @@
             </div>
             <a href="#" class="box-info-link">Узнать больше об исследовании</a>
         </div>
+        </div>
     </section>
     <section class="app-reviews">
+        <div class="container">
         <div class="app-reviews__item">
             <div class="app-reviews__img"><img src="#" alt=""></div>
             <div class="app-reviews__text">
@@ -113,8 +117,10 @@
 
             </div>
         </div>
+        </div>
     </section>
     <section class="app-price">
+        <div class="container">
         <table class="app-price__table">
             <th class="app-price__name"></th>
             <th class="app-price__base">База 1,99 USD</th>
@@ -145,8 +151,10 @@
             <div class="">Смайлики</div>
             <div class="">Комментарии</div>
         </div>
+        </div>
     </section>
     <section class="app-contacts">
+        <div class="container">
         <div class="app-contacts__title">
             Остались вопросы?
             Свяжитесь с нами!
@@ -168,25 +176,31 @@
         <div class="app-contacts__map">
 
         </div>
+        </div>
     </section>
-    </div>
 </main>
 <footer class="footer">
-    <div class="container">
-        <div class="footer__wrapper">
+    <div class="container footer__row">
     <div class="footer__logo">
         <picture>
             <source srcset="./build/img/logo-xl-footer.png" type="image/svg+xml" media="(min-width: 1200px)">
-            <source srcset="./build/img/logo-sm-footer.png" type="image/svg+xml" media="(min-width: 660px)">
-            <img src="./build/img/logo-xs-footer.png" alt="logo">
+            <img src="./build/img/logo-sm-footer.png" alt="logo">
         </picture>
     </div>
     <ul class="footer__social social">
-        <li class="social__item"></li>
-        <li class="social__item"></li>
-        <li class="social__item"></li>
+        <li class="social__item">
+            <span class="i-twitter"></span>
+        </li>
+        <li class="social__item">
+            <span class="i-facebook"></span>
+        </li>
+        <li class="social__item">
+            <span class="i-youtube"></span>
+        </li>
     </ul>
-    <div class="footer__copyright copyright">Разработано <span class="copyright__img"></span></div>
+    <div class="footer__copyright copyright">
+        <span class="copyright__text">Разработано</span>
+        <span class="i-htmlacademy"></span>
     </div>
     </div>
 </footer>
