get-app-content

--- a/index.html
+++ b/index.html
@@ -46,17 +46,25 @@
     <section class="get-app">
         <div class="container">
         <div class="get-app__inner">
+            <div class="get-app__content">
             <div class="get-app__title">
                 Взгляните на жизнь иначе!
             </div>
             <a href="#" class="get-app__btn">Скачать приложение</a>
             <ul class="get-app__icons">
-                <li class="get-app__icon"></li>
-                <li class="get-app__icon"></li>
-                <li class="get-app__icon"></li>
+                <li class="get-app__icon">
+                    <a href="#"><span class="i-apple-logo"></span></a>
+                </li>
+                <li class="get-app__icon">
+                    <a href="#"><span class="i-android-logo"></span></a>
+                </li>
+                <li class="get-app__icon">
+                    <a href="#"><span class="i-microsoft-logo"></span></a>
+                </li>
             </ul>
-            <div class="get-app__content">
+            <div class="get-app__text">
                 Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+            </div>
             </div>
         </div>
         </div>
