--- a/index.html
+++ b/index.html
@@ -172,17 +172,17 @@
             Остались вопросы?
             Свяжитесь с нами!
         </div>
-        <div class="app-contacts__wrapper">
-            <div class="app-contacts__call">
-                <h4>Звоните:</h4>
+        <div class="app-contacts__content">
+            <div class="app-contacts__item">
+                <h4 class="app-contacts__heading">Звоните:</h4>
                 <span>+7 (812) 555-66-66</span>
             </div>
-            <div class="app-contacts__address">
-                <h4>Приезжайте в гости:</h4>
-                <span>ул. Большая Конюшенная, 19/8</span>
+            <div class="app-contacts__item app-contacts__item--address">
+                <h4 class="app-contacts__heading">Приезжайте в гости:</h4>
+                <span>ул. Большая<br> Конюшенная, 19/8</span>
             </div>
-            <div class="app-contacts__mail">
-                <h4>Пишите:</h4>
+            <div class="app-contacts__item">
+                <h4 class="app-contacts__heading">Пишите:</h4>
                 <span>mail@htmlacademy.ru</span>
             </div>
         </div>
@@ -217,5 +217,6 @@
     </div>
     </div>
 </footer>
+<script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
