--- a/index.html
+++ b/index.html
@@ -175,21 +175,26 @@
         <div class="app-contacts__content">
             <div class="app-contacts__item">
                 <h4 class="app-contacts__heading">Звоните:</h4>
-                <span>+7 (812) 555-66-66</span>
+                <a class="app-contacts__link" href="tel:+7 (812) 555-66-66">+7 (812) 555-66-66</a>
             </div>
             <div class="app-contacts__item app-contacts__item--address">
                 <h4 class="app-contacts__heading">Приезжайте в гости:</h4>
-                <span>ул. Большая<br> Конюшенная, 19/8</span>
+                <address class="app-contacts__address">ул. Большая<br> Конюшенная, 19/8</address>
             </div>
             <div class="app-contacts__item">
                 <h4 class="app-contacts__heading">Пишите:</h4>
-                <span>mail@htmlacademy.ru</span>
+                <a class="app-contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </div>
         </div>
-        <div class="app-contacts__map">
+        </div>
+        <svg deg="180" version="1.1"  width="100%" height="100px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+             xml:space="preserve" viewBox="0 0 100 100" preserveAspectRatio="none" >
 
-        </div>
-        </div>
+<polygon fill="red" points="0,100 50,0 100,100"/>
+</svg>
+            <div id="map">
+                <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=ee84bb87-99fd-4001-95f7-8fa65d292808" type="text/javascript"></script>
+            </div>
     </section>
 </main>
 <footer class="footer">
@@ -217,6 +222,6 @@
     </div>
     </div>
 </footer>
-<script src="./script.js" type="text/javascript"></script>
+<script src="./build/js/script.js" type="text/javascript"></script>
 </body>
 </html>
