--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </ul>
     <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
-        <span class="i-htmlacademy"></span>
+        <span class="i-htmlacademy copyright__img"></span>
     </div>
     </div>
 </footer>
