--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
             <p class="app-description__paragraph-2">Нам есть, что вам предложить!</p>
         </div>
         <div class="app-description__cards">
-            <div class="card">
+            <div class="card app-description__card">
                 <div class="card__img"><img src="./build/img/phone-1-lg.png" alt=""></div>
                 <h4 class="card__title">Поднимает настроение</h4>
                 <div class="card__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
                     несколько кликов!
                 </div>
             </div>
-            <div class="card">
+            <div class="card app-description__card">
                 <div class="card__img"><img src="./build/img/phone-2-lg.png" alt=""></div>
                 <h4 class="card__title">Меняет мир вокруг</h4>
                 <div class="card__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить
                     эффект
                 </div>
             </div>
-            <div class="card">
+            <div class="card app-description__card">
                 <div class="card__img card__img--mobile">
                     <picture>
                         <source srcset="./build/img/phone-3-lg.png" type="image/svg+xml" media="(min-width: 1200px)">
@@ -111,6 +111,7 @@
                 <img src="./build/img/time-sm.png" alt="logo">
                 </picture>
             </div>
+            <div class="box-info__text">
             <div class="box-info__title">
                 Эффект на 24 часа!
             </div>
@@ -119,6 +120,7 @@
                 длится целые сутки!
             </div>
             <a href="#" class="box-info-link">Узнать больше об исследовании</a>
+            </div>
         </div>
         </div>
     </section>
@@ -127,15 +129,16 @@
         <div class="app-reviews__item">
             <div class="app-reviews__img"><img src="#" alt=""></div>
             <div class="app-reviews__text">
-
+                «Это приложение перевернуло мой мир и позволило по-новому взглянуть на
+                привычные серые вещи! А еще я познакомился со своей будущей женой в
+                комментариях к выложенной фотографии!»
             </div>
             <div class="app-reviews__name-user">
-
+                Николай Петров
             </div>
             <div class="app-reviews__info-user">
-
+                25 лет, водитель трамвая
             </div>
-        </div>
         </div>
     </section>
     <section class="app-price">
