--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <section class="app-price">
         <div class="container">
         <table class="app-price__table table">
+            <tbody>
             <tr>
             <th></th>
             <th class="table__cell table__cell--name">
@@ -186,6 +187,7 @@
                 <td class="table__cell">X</td>
                 <td class="table__cell">V</td>
             </tr>
+            </tbody>
         </table>
         <div class="app-price__slider slider">
             <div class="slider__rate">
