--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
             </div>
         </div>
-        <div class="box-info">
+        <div class="app-description__box-info box-info">
             <div class="container box-info__container">
                 <div class="box-info__inner">
             <div class="box-info__img">
@@ -171,21 +171,39 @@
             </tr>
             <tr>
                 <td class="table__cell">Розовый фильтр</td>
-                <td class="table__cell">V</td>
-                <td class="table__cell">V</td>
-                <td class="table__cell">V</td>
+                <td class="table__cell">
+                    <span class="i-yes"></span>
+                </td>
+                <td class="table__cell">
+                    <span class="i-yes"></span>
+                </td>
+                <td class="table__cell">
+                    <span class="i-yes"></span>
+                </td>
             </tr>
             <tr>
                 <td class="table__cell">Смайлики</td>
-                <td class="table__cell">X</td>
-                <td class="table__cell">V</td>
-                <td class="table__cell">V</td>
+                <td class="table__cell">
+                    <span class="i-no"></span>
+                </td>
+                <td class="table__cell">
+                    <span class="i-yes"></span>
+                </td>
+                <td class="table__cell">
+                    <span class="i-yes"></span>
+                </td>
             </tr>
             <tr>
                 <td class="table__cell">Комментарии</td>
-                <td class="table__cell">X</td>
-                <td class="table__cell">X</td>
-                <td class="table__cell">V</td>
+                <td class="table__cell">
+                    <span class="i-no"></span>
+                </td>
+                <td class="table__cell">
+                    <span class="i-no"></span>
+                </td>
+                <td class="table__cell">
+                    <span class="i-yes"></span>
+                </td>
             </tr>
             </tbody>
         </table>
@@ -222,11 +240,6 @@
         </div>
         </div>
             <div id="map" class="map">
-                <div class="map__decor">
-                    <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" viewBox="0 0 100 102" preserveAspectRatio="none">
-                        <path d="M0 0 L50 100 L100 0 Z"></path>
-                    </svg>
-                </div>
                 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=ee84bb87-99fd-4001-95f7-8fa65d292808" type="text/javascript"></script>
             </div>
     </section>
