--- a/index.html
+++ b/index.html
@@ -157,16 +157,16 @@
             <tr>
             <th></th>
             <th class="table__cell table__cell--name">
-                <div class="bold">База</div>
-                <div class="light table__rate-price">1,99 USD</div>
+                <div class="table__rate">База</div>
+                <div class="table__rate-price">1,99 USD</div>
             </th>
-            <th class="table__cell table__cell--name">
-                <div class="bold">Стандарт</div>
-                <div class="light table__rate-price">3,99 USD</div>
+            <th class="table__cell table__cell--name table__cell--hit">
+                <div class="table__rate">Стандарт</div>
+                <div class="table__rate-price">3,99 USD</div>
             </th>
             <th class="table__cell table__cell--name table__cell--last">
-                <div class="bold">Анлим</div>
-                <div class="light table__rate-price">9,99 USD</div>
+                <div class="table__|rate">Анлим</div>
+                <div class="table__rate-price">9,99 USD</div>
             </th>
             </tr>
             <tr>
@@ -208,13 +208,20 @@
             </tbody>
         </table>
         <div class="app-price__slider slider">
-            <div class="slider__rate">
+            <div class="slider__rate slider__rate--hit">
                 <div class="bold">Стандарт</div>
                 <div class="light slider__rate-price">3,99 USD</div>
             </div>
-            <div class="slider__option">Розовый фильтр</div>
-            <div class="slider__option">Смайлики</div>
-            <div class="slider__option">Комментарии</div>
+            <div class="slider__option">
+                <span>Розовый фильтр</span>
+                <span class="i-yes"></span>
+            </div>
+            <div class="slider__option">
+                <span>Смайлики</span>
+                <span class="i-yes"></span></div>
+            <div class="slider__option">
+                <span>Комментарии</span>
+                <span class="i-no"></span></div>
         </div>
         </div>
     </section>
