--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<header class="header">
-    <div class="container header__row">
-        <div class="header__logo">
+<header class="header menu-open__header">
+    <div class="container header__row menu-open__row">
+        <div class="header__logo menu-open__logo">
             <picture>
                 <source srcset="./build/img/logo-xl.png" type="image/svg+xml" media="(min-width: 1200px)">
                 <source srcset="./build/img/logo-sm.png" type="image/svg+xml" media="(min-width: 660px)">
                 <img src="./build/img/logo-xs.png" alt="logo">
             </picture>
         </div>
-        <nav class="header__menu menu">
-            <ul class="menu__list">
-                <li class="menu__item">
+        <nav class="header__menu menu menu-open__nav">
+            <ul class="menu__list menu-open__list">
+                <li class="menu__item menu-open__item">
                     <a href="#">Главная</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu-open__item">
                     <a href="#">Фотографии</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu-open__item">
                     <a href="#">Конкурс</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu-open__item">
                     <a href="#">HTML Academy</a>
                 </li>
             </ul>
-            <div class="menu__control">
-                <button type="button" class="menu__btn menu__btn--open">
+            <div class="menu__control menu-open__control">
+                <button type="button" class="menu__btn menu__btn--open menu-open__btn--open">
                     <span class="i-burger"></span>
                 </button>
-                <button type="button" class="menu__btn menu__btn--close">
+                <button type="button" class="menu__btn menu__btn--close menu-open__btn--close">
                     <span class="i-close"></span>
                 </button>
             </div>
