--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="build/css/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-<body>
+<body class="body">
 <header class="header">
     <div class="container header__row">
         <div class="header__logo">
@@ -277,5 +277,20 @@
     </div>
 </footer>
 <script src="./build/js/script.js" type="text/javascript"></script>
+<script>
+    let menu_open = document.querySelector(".menu__btn--open");
+    let menu_inner = document.querySelector(".body");
+    let menu_close = document.querySelector(".menu__btn--close");
+
+    menu_open.addEventListener("click", function (evt) {
+        evt.preventDefault();
+        menu_inner.classList.add("menu-open");
+    });
+
+    menu_close.addEventListener("click", function (evt) {
+        evt.preventDefault();
+        menu_inner.classList.remove("menu-open");
+    });
+</script>
 </body>
 </html>
