--- a/html/pages/photo.html
+++ b/html/pages/photo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-[snp tpl="template/head.html" title="Pink Photo" ]
+[snp tpl="template/head.html" title="Pink Photo 322" ]
 <body>
 [snp tpl="template/header.html" ]
 
